--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,21 @@
 
 	 <packaging>pom</packaging>
 
-	 	<modules>
+	<modules>
         <module>web-app</module>
+		<module>web-model</module>
 	</modules>
 
 	
 	<groupId>com.alex.framework</groupId>
 	<artifactId>mvacspringbootapi</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>${revision}</version>
 	<name>mvac-springboot-api</name>
 	<description>Demo project for Spring Boot</description>
 	
 	<properties>
 		<java.version>11</java.version>
+		<revision>1.0.0-SNAPSHOT</revision>
 	</properties>
 
 
